# placement-portal

./: .gitignore  pyproject.toml  run.py
app/: __init__.py  config.py  extensions.py
app/admin/: __init__.py  routes.py
app/auth/: __init__.py  routes.py
app/company/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/student/: __init__.py  routes.py
app/templates/: base.html
app/templates/admin/: dashboard.html
app/templates/auth/: login.html
app/templates/company/: dashboard.html
app/templates/errors/: 404.html  500.html
app/templates/student/: dashboard.html
